# netidx-excel

./: Cargo.toml  README.md  rustfmt.toml
src/: lib.rs  server.rs  setter.rs
src/comglue/: dispatch.rs  glue.rs  interface.rs  mod.rs  variant.rs
src/xll_utils/: mod.rs  registration.rs  udf.rs  xlcall.rs  xloper12.rs
