[package]
name = "netidx-excel"
version = "0.1.6"
edition = "2021"
license = "MIT"
description = "Pull realtime Netidx data into Excel with RTD"
homepage = "https://estokes.github.io/netidx-book/"
repository = "https://github.com/estokes/netidx-excel/"
readme = "README.md"
keywords = ["network", "networking", "distributed", "kerberos"]
categories = ["network-programming"]

[dependencies]
chrono = "0.4"
com = { version = "0.6", features = ["production"] }
log = { version = "0.4", features = ["serde"] }
simplelog = "0.12"
parking_lot = "0.12"
netidx = { version = "0.27" }
netidx-core = { version = "0.26" }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
fxhash = "0.2"
anyhow = "1"
dirs = "5"
serde = "1"
serde_json = "1"
serde_derive = "1"
windows = { version = "0.60", features = [ "Win32_System_Com_StructuredStorage", 
                                           "Win32_System_Com", 
                                           "Win32_System_Com_Marshal",
                                           "Win32_Foundation",
                                           "Win32_System_LibraryLoader",
                                           "Win32_System_Memory",
                                           "Win32_System_Ole",
                                           "Win32_System_Variant",
                                           "Win32_Globalization",
                                           "Win32_System_Registry",
                                           "Win32_System_Threading",
                                           "Win32_Security",
                                           "Win32_Security_Authorization", ] } 

[lib]
crate-type = ["rlib", "cdylib"]
